tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_integer.py
# pylint: disable=missing-function-docstring, missing-module-docstring
def compare_isnot_int_int(a : 'int', b : 'int'):
    return a is not b
